--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p style="color:white; text-transform: uppercase; font-weight: 700;">Page not found</p>
             <a href="???">Go to home</a>
         </div>
-        <img src="ufo.png" alt="ufo">
+        <img src="./ufo.png" alt="ufo">
         
      </main>
   </body>
