--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   </head>
 
   <body style="background-color: blue;">
-     <main style="background-color:yellow; width: 50%; margin-top: 100px; margin-left: 25%;">
-        <div>
-            <h1 style="color:white; font-weight: 700;">404</h1>
-            <p style="color:white; text-transform: uppercase; font-weight: 700;">Page not found</p>
-            <a href="???">Go to home</a>
+     <main style="background-color:yellow; width: 50%; margin-top: 170px; margin-left: 25%; display: inline-block;">
+        <div style="background-color: pink; width: 35%; float: left">
+            <h1 style="color:white; font-weight: 700; font-size: 100px; margin: 0; margin-top: 40px;">404</h1>
+            <p style="color:white; text-transform: uppercase; font-size: 50px; font-weight: 400; margin: 0;">Page not found</p>
+            <a href="???=">Go to home</a>
         </div>
-        <img src="./ufo.png" alt="ufo">
+        <img src="./ufo2.png" alt="ufo" style="width: 60%; float: right;">
         
      </main>
   </body>
@@ -35,6 +35,16 @@ text-transform: uppercase;
 elementu stumdymas tarpusavyje"
 margin 100px visomis kryptymis si elementa"
 margin-top, right, bottom,left;
+
+Elementu atvaizdavimas
+display: block; visi blocak elementai krenta vienas po kitu (kuriu yra dauguma)
+display: inline; elementas elgiasi kaip zodis tekste 
+display: inline-block; jei elementai telpa i viena eilute - suguls; jei netelpa, ti sekantis krenta i nauja eilute; jei jame daugiau turinio nei tilptu pas teva, jo max plotis yra 100%
+
+
+priverstinis elementu sustumimas pasirinkta kryptimi:
+float: left;
+float: right;
 
 
 
