--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
 
   <body style="background-color: blue;">
-     <main style="background-color:yellow; width: 50%; margin-top: 170px; margin-left: 25%; display: inline-block;">
-        <div style="background-color: pink; width: 35%; float: left">
-            <h1 style="color:white; font-weight: 700; font-size: 100px; margin: 0; margin-top: 40px;">404</h1>
-            <p style="color:white; text-transform: uppercase; font-size: 50px; font-weight: 400; margin: 0;">Page not found</p>
-            <a href="???=">Go to home</a>
+     <main style="width: 50%; margin-top: 170px; margin-left: 25%; display: inline-block;">
+        <div style="width: 35%; float: left; margin-top: 100px;">
+            <h1 style="color:white; font-size: 80px; margin: 0;">404</h1>
+            <p style="color:white; text-transform: uppercase; margin: 0; font-size: 30px; font-weight: 400; margin: 0; margin-top: 40px;">Page not found</p>
+            <a href="???=" style="color: white">Go to home</a>
         </div>
         <img src="./ufo2.png" alt="ufo" style="width: 60%; float: right;">
         
