--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p style="color:white; text-transform: uppercase; margin: 0; font-size: 30px; font-weight: 400; margin: 0; margin-top: 40px;">Page not found</p>
             <a href="???=" style="color: white">Go to home</a>
         </div>
-        <img src="./ufo2.png" alt="ufo" style="width: 60%; float: right;">
+        <img src="./img/ufo2.png" alt="ufo" style="width: 60%; float: right;">
         
      </main>
   </body>
