--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
 
   <body style="background-color: blue;">
-     <main style="width: 50%; margin-top: 170px; margin-left: 25%; display: inline-block;">
-        <div style="width: 35%; float: left; margin-top: 100px;">
-            <h1 style="color:white; font-size: 80px; margin: 0;">404</h1>
-            <p style="color:white; text-transform: uppercase; margin: 0; font-size: 30px; font-weight: 400; margin: 0; margin-top: 40px;">Page not found</p>
-            <a href="???=" style="color: white">Go to home</a>
+     <main style="display: inline-block; width: 50%; margin-top: 140px; margin-left: 25%;">
+        <div style="width: 35%; float: left; margin-top: 170px;">
+            <h1 style="color:white; font-size: 80px; margin: 0; font-family: Arial, Helvetica, sans-serif; font-weight: normal;">404</h1>
+            <p style="color:white; text-transform: uppercase; font-size: 30px; font-weight: normal; margin: 0; margin-top: 20px; margin-bottom: 20px; font-family: Arial, Helvetica, sans-serif;">Page not found</p>
+            <a href="???=" style="color: white; text-decoration: none; font-family: Arial, Helvetica, sans-serif; font-size: 17px; border: 2px solid white; padding: 10px; padding-left: 30px; padding-right: 30px; border-radius: 21px; display: inline-block;">Go to home</a>
         </div>
         <img src="./img/ufo2.png" alt="ufo" style="width: 60%; float: right;">
         
@@ -31,10 +31,21 @@ font-family: Helvetica;
 font-weight: bold; normal -400, bold -700;
 font-weight: 100-900;
 text-transform: uppercase;
+text-decoration: none;
+text-decoration: underline;
 
 elementu stumdymas tarpusavyje"
 margin 100px visomis kryptymis si elementa"
 margin-top, right, bottom,left;
+
+atstumas tarp elemeto krastines ir jo turinio:
+
+padding: 100px;
+padding-top, bottom, left ;
+
+border-radius: 0;
+border-radius: 50%; kiausino forma
+border-radius: 50px stadiono forma
 
 Elementu atvaizdavimas
 display: block; visi blocak elementai krenta vienas po kitu (kuriu yra dauguma)
@@ -46,7 +57,9 @@ priverstinis elementu sustumimas pasirinkta kryptimi:
 float: left;
 float: right;
 
+border: 1px solid white;
 
+https://code.visualstudio.com/shortcuts/keyboard-shortcuts-windows.pdf
 
 
 -->
