backgroud color fix

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>02-UFO</title>
   </head>
 
-  <body style="background-color: blue;">
+  <body style="background-color: rgb(78, 120, 229)">
      <main style="display: inline-block; width: 50%; margin-top: 140px; margin-left: 25%;">
         <div style="width: 35%; float: left; margin-top: 170px;">
             <h1 style="color:white; font-size: 80px; margin: 0; font-family: Arial, Helvetica, sans-serif; font-weight: normal;">404</h1>
