--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p style="color:white; text-transform: uppercase; font-size: 30px; font-weight: normal; margin: 0; margin-top: 20px; margin-bottom: 20px; font-family: Arial, Helvetica, sans-serif;">Page not found</p>
             <a href="???=" style="color: white; text-decoration: none; font-family: Arial, Helvetica, sans-serif; font-size: 17px; border: 2px solid white; padding: 10px; padding-left: 30px; padding-right: 30px; border-radius: 21px; display: inline-block;">Go to home</a>
         </div>
-        <img src="./img/ufo2.png" alt="ufo" style="width: 60%; float: right;">
+        <img src="./img/ufo_transparent.png" alt="ufo" style="width: 60%; float: right;">
         
      </main>
   </body>
