--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>02-UFO</title>
+    <link rel="stylesheet" href="./css/main.css">
   </head>
 
-  <body style="background-color: rgb(78, 120, 229)">
-     <main style="display: inline-block; width: 50%; margin-top: 140px; margin-left: 25%;">
-        <div style="width: 35%; float: left; margin-top: 170px;">
-            <h1 style="color:white; font-size: 80px; margin: 0; font-family: Arial, Helvetica, sans-serif; font-weight: normal;">404</h1>
-            <p style="color:white; text-transform: uppercase; font-size: 30px; font-weight: normal; margin: 0; margin-top: 20px; margin-bottom: 20px; font-family: Arial, Helvetica, sans-serif;">Page not found</p>
-            <a href="???=" style="color: white; text-decoration: none; font-family: Arial, Helvetica, sans-serif; font-size: 17px; border: 2px solid white; padding: 10px; padding-left: 30px; padding-right: 30px; border-radius: 21px; display: inline-block;">Go to home</a>
+  <body>
+     <main>
+        <div>
+            <h1>404</h1>
+            <p >Page not found</p>
+            <a class="button" href="???=" style="">Go to home</a>
         </div>
-        <img src="./img/ufo.png" alt="ufo" style="width: 60%; float: right;">
+        <img class="img" src="./img/ufo.png" alt="ufo">
         
      </main>
   </body>
